--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
 
 test:
   <<: *default
-  database: rails_exam01__test
+  database: rails_exam01_test
 
 production:
   <<: *default
